[gd_scene load_steps=28 format=2]

[ext_resource path="res://Character.png" type="Texture" id=1]
[ext_resource path="res://Tile.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Ball.png" type="Texture" id=4]
[ext_resource path="res://RightGoal.gd" type="Script" id=5]
[ext_resource path="res://LeftGoal.gd" type="Script" id=6]
[ext_resource path="res://Player2.gd" type="Script" id=7]
[ext_resource path="res://Fire.png" type="Texture" id=8]
[ext_resource path="res://PowerUp.gd" type="Script" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=5]
0/name = "Tile.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 2
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="CapsuleShape2D" id=6]
radius = 14.0
height = 26.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.243
height = 6.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.24264
height = 6.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 1 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 32, 80 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 16, 16 )

[sub_resource type="PhysicsMaterial" id=17]
bounce = 0.6

[sub_resource type="CircleShape2D" id=18]
radius = 16.0

[node name="World" type="Node"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
collision_mask = 7
format = 1
tile_data = PoolIntArray( -720904, 0, 0, -720903, 0, 0, -720902, 0, 0, -720901, 0, 0, -720900, 0, 0, -720899, 0, 0, -720898, 0, 0, -720897, 0, 0, -786432, 0, 0, -786431, 0, 0, -786430, 0, 0, -786429, 0, 0, -786428, 0, 0, -786427, 0, 0, -786426, 0, 0, -786425, 0, 0, -786424, 0, 0, -786423, 0, 0, -786422, 0, 0, -786421, 0, 0, -786420, 0, 0, -786419, 0, 0, -786418, 0, 0, -786417, 0, 0, -786416, 0, 0, -786415, 0, 0, -655368, 0, 0, -720879, 0, 0, -589832, 0, 0, -655343, 0, 0, -524296, 0, 0, -589807, 0, 0, -458760, 0, 0, -524271, 0, 0, -393224, 0, 0, -458735, 0, 0, -327688, 0, 0, -393199, 0, 0, -262154, 0, 0, -262153, 0, 0, -262152, 0, 0, -327663, 0, 0, -327662, 0, 0, -327661, 0, 0, -196618, 0, 0, -262125, 0, 0, -131082, 0, 0, -196589, 0, 0, -65546, 0, 0, -131053, 0, 0, -10, 0, 0, -65517, 0, 0, 65526, 0, 0, 19, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 5
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
position = Vector2( 2, 1 )
shape = SubResource( 6 )

[node name="LeftLeg" type="Area2D" parent="Player"]
visible = false
position = Vector2( -13, 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/LeftLeg"]
rotation = 1.0472
shape = SubResource( 7 )

[node name="RightLeg" type="Area2D" parent="Player"]
visible = false
position = Vector2( 17, 19 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/RightLeg"]
rotation = -1.0472
shape = SubResource( 8 )

[node name="Head" type="Area2D" parent="Player"]
visible = false
position = Vector2( 2, -27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Head"]
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="Player"]
wait_time = 30.0
one_shot = true

[node name="Player2" type="KinematicBody2D" parent="."]
position = Vector2( 425, 2 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Player2"]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
visible = false
position = Vector2( 2, 1 )
shape = SubResource( 6 )

[node name="LeftLeg" type="Area2D" parent="Player2"]
visible = false
position = Vector2( -13, 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2/LeftLeg"]
rotation = 1.0472
shape = SubResource( 7 )

[node name="RightLeg" type="Area2D" parent="Player2"]
visible = false
position = Vector2( 17, 19 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2/RightLeg"]
rotation = -1.0472
shape = SubResource( 8 )

[node name="Head" type="Area2D" parent="Player2"]
visible = false
position = Vector2( 2, -27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2/Head"]
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="Player2"]
wait_time = 30.0
one_shot = true

[node name="RightGoal" type="Area2D" parent="."]
position = Vector2( 576, -48 )
collision_mask = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
shape = SubResource( 10 )

[node name="LeftGoal" type="Area2D" parent="."]
position = Vector2( -256, -48 )
collision_mask = 4
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
shape = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 100, -99 )
current = true

[node name="UI" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="LeftScore" type="Label" parent="UI"]
margin_left = 26.0
margin_top = -329.0
margin_right = 66.0
margin_bottom = -314.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightScore" type="Label" parent="UI"]
margin_left = 138.0
margin_top = -329.0
margin_right = 178.0
margin_bottom = -314.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dash" type="Label" parent="UI"]
margin_left = 81.0
margin_top = -333.0
margin_right = 121.0
margin_bottom = -319.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "-"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUp" type="Area2D" parent="."]
position = Vector2( 208, 16 )
collision_mask = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="PowerUp"]
frames = SubResource( 15 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerUp"]
visible = false
shape = SubResource( 16 )

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2( 69.2897, -10.8973 )
collision_layer = 4
physics_material_override = SubResource( 17 )
gravity_scale = 3.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ball"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
visible = false
shape = SubResource( 18 )
[connection signal="body_entered" from="Player/LeftLeg" to="Player" method="_on_LeftLeg_body_entered"]
[connection signal="body_entered" from="Player/RightLeg" to="Player" method="_on_RightLeg_body_entered"]
[connection signal="body_entered" from="Player/Head" to="Player" method="_on_Head_body_entered"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Player2/LeftLeg" to="Player2" method="_on_LeftLeg_body_entered"]
[connection signal="body_entered" from="Player2/RightLeg" to="Player2" method="_on_RightLeg_body_entered"]
[connection signal="body_entered" from="Player2/Head" to="Player2" method="_on_Head_body_entered"]
[connection signal="timeout" from="Player2/Timer" to="Player2" method="_on_Timer_timeout"]
[connection signal="body_entered" from="RightGoal" to="RightGoal" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="LeftGoal" to="LeftGoal" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="PowerUp" to="PowerUp" method="_on_PowerUp_body_entered"]
